--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Flask Intro</title>
+    <title>PythonAnyWhere - Bekabe</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="static/bootstrap.min.css" rel="stylesheet" media="screen">
   </head>
   <body>
     <div class="container">
-      <h1>Welcome to Flask Home</h1>
+      <h1>Welcome to PythonAnyWhere, Flask framework</h1>
       <h2>Home of Ryan Bekabe - bekabeipa@gmail.com!</h2>
       <br>
       <p>Click <a href="/">here</a> to go home.</p>
